# frappe_data_pipelines

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
frappe_data_pipelines/: hooks.py  modules.txt  permissions.py  utils.py
frappe_data_pipelines/frappe_data_pipelines/: __init__.py
frappe_data_pipelines/frappe_data_pipelines/doctype/data_pipeline_settings/: data_pipeline_settings.js  data_pipeline_settings.json  data_pipeline_settings.py
frappe_data_pipelines/frappe_data_pipelines/doctype/document_chunk/: document_chunk.json  document_chunk.py
frappe_data_pipelines/frappe_data_pipelines/doctype/embedding_job/: embedding_job.json  embedding_job.py
frappe_data_pipelines/frappe_data_pipelines/workspace/frappe_data_pipelines/: frappe_data_pipelines.json
frappe_data_pipelines/handlers/: drive_file_handler.py
frappe_data_pipelines/services/: chunking_service.py  context_service.py  decision_agent.py  embedding_service.py  ocr_service.py  qdrant_service.py  search_service.py  text_extraction.py  vision_service.py
frappe_data_pipelines/setup/: __init__.py  after_install.py
frappe_data_pipelines/tasks/: process_embedding.py
